--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
     <h2 class="subtitle sex-title">
       Sex after using <a href="#" class="red__txt">Animale</a>
     </h2>
-    <div>
+    <div class="sex__gif">
       <img src="./img/sex1.gif" alt="">
       <img src="./img/sex2.gif" alt="">
       <img src="./img/sex3.gif" alt="">
