--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
   </div>
 
   <!-- //////////////// псевдо каунтер ////////// -->
-  <div class="popup close" id="bottombar1" style="bottom: 0px; position: fixed;">
+  <div class="popup close" id="bottombar1">
     <span>184 people are reading this page right now.</span>
   </div>
   <script>
