--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
 
     <h2 class="subtitle pg-headline do-posle">
       Your penis is guaranteed <br>
-      to increase by <a href="#" class="red__txt">4.3 inches in just 9 days</a>
+      to increase by <a href="#" class="red__txt">3.5 inches in just 9 days</a>
     </h2>
     <div class="img__box__do-posle">
       <div class="text__box__do-posle">
@@ -839,7 +839,7 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Eric</a></span>
         <span>Age: <a href="#" class="b__txtm">42 years old</a></span>
-        <span>old Penis size before Animale: <a href="#" class="b__txtm">2.5 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">2.5 inches</a></span>
         <span>Penis size after Animale: <a href="#" class="red__txt1">7.3 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I was skeptical at first, but <a href="#" class="red__txt1">Animale</a> has truly delivered on its
@@ -856,7 +856,7 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Thomas</a></span>
         <span>Age: <a href="#" class="b__txtm">39 years old</a></span>
-        <span>old Penis size before Animale: <a href="#" class="b__txtm">3.2 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">3.2 inches</a></span>
         <span>Penis size after Animale: <a href="#" class="red__txt1">6.1 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I'm genuinely amazed by the results I've experienced since using
@@ -874,7 +874,7 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Jake</a></span>
         <span>Age: <a href="#" class="b__txtm">27 years old</a></span>
-        <span>old Penis size before Animale: <a href="#" class="b__txtm">3.5 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">3.5 inches</a></span>
         <span>Penis size after Animale: <a href="#" class="red__txt1">7.3 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I took a chance on <a href="#" class="red__txt1">Animale</a>, and I'm so glad I did. With a 3.8-inch size
@@ -891,7 +891,7 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Alex</a></span>
         <span>Age: <a href="#" class="b__txtm">31 years old</a></span>
-        <span>old Penis size before Animale: <a href="#" class="b__txtm">2.2 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">2.2 inches</a></span>
         <span>Penis size after Animale: <a href="#" class="red__txt1">6.3 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "The transformation I've experienced with <a href="#" class="red__txt1">Animale</a> is nothing short of
@@ -939,7 +939,7 @@
     </h2>
 
     <div class="inch__red">
-      <div class="inch__item">+2.5 inch<br>
+      <div class="inch__item">+3.5 inch<br>
         (on average)</div>
       <div class="inch__item">+36 min sex<br>
         (on average)</div>
