--- a/index.html
+++ b/index.html
@@ -716,8 +716,10 @@
     </div>
 
     <div class="pg-rail-tall__head js-pg-rail-tall__head">
-      <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
-        src="./img/titlegif.gif">
+      <div class="gif__box">
+        <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
+          src="./img/titlegif.gif">
+      </div>
 
       <div class="media__caption el__storyelement__title el__storyelement__title1">Report: The editors of
         CNN for a long time could not believe the veracity of this story, but after double-checking everything 10
