--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
       height: 100%;
       z-index: 30;
       background-color: rgba(0, 0, 0, 0.5);
-      display: none;
+      /* display: none; */
     }
 
     .popup-content {
@@ -1158,13 +1158,17 @@
       color: #C00000;
       cursor: pointer;
     }
+    .popup__h2{
+      color: #C00000;
+      zoom: 1.9;
+    }
   </style>
 
 
   <div id="popup">
     <div class="popup-content">
       <div id="close-popup">x</div>
-      <h2 class="red__txt1">Wait!</h2>
+      <h2 class="popup__h2">Wait!</h2>
       <div><strong>GET A HUGE <span class="red__txt1">DISCOUNT</span> + FREE SHIPPING</strong></div>
       <div class="zakaz__img">
         <div class="zakaz__pic">
