--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
       height: 100%;
       z-index: 30;
       background-color: rgba(0, 0, 0, 0.5);
-      /* display: none; */
+      display: none;
     }
 
     .popup-content {
