--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         (on average)</div>
     </div>
 
-    <div class="zn-body__paragraph paragraph__do-posle">
+    <div class="zn-body__paragraph paragraph__do-posle2">
       Discover the jaw-dropping results of the recent experiment with <a href="#" class="red__txt1">Animale</a>: 6 men
       experienced significant increases
       in penis size, a boost in sexual stamina, and newfound confidence in their performance. Don't miss your chance to
