--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     </div>
   </div>
 
-  <!-- <script>
+  <script>
     setTimeout(function() {
       document.getElementById('popup').style.display = 'block';
     }, 20000);
@@ -586,7 +586,7 @@
     document.getElementById('close-popup').addEventListener('click', function() {
       document.getElementById('popup').style.display = 'none';
     });
-  </script> -->
+  </script>
 
 </body>
 
