--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">John</a></span>
         <span>Age: <a href="#" class="b__txtm">35 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">4.5 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.7 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">1.8 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">5.3 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "<a href="#" class="red__txt1">Animale</a> has been a game-changer for me. My size increased by 2.2
+          "<a href="#" class="red__txt1">Animale</a> has been a game-changer for me. My size increased by 3.5
           inches, and my confidence has skyrocketed. The energy and stamina I now have are mind-blowing. I'm beyond
           satisfied with the results and can't recommend it enough!"
         </div>
@@ -218,11 +218,11 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Mark</a></span>
         <span>Age: <a href="#" class="b__txtm">29 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">2.5 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.0 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">2.2 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">4.9 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I couldn't be happier with the outcome of using <a href="#" class="red__txt1">Animale</a>. My penis
-          size increased by 3.5 inches,
+          size increased by 2.7 inches,
           and my sex drive has never been stronger. I feel like a new man, and my girlfriend is thrilled with our
           enhanced sexual experiences!"
         </div>
@@ -236,11 +236,11 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Eric</a></span>
         <span>Age: <a href="#" class="b__txtm">42 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">2.5 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">7.3 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">1.95 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">5.5 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I was skeptical at first, but <a href="#" class="red__txt1">Animale</a> has truly delivered on its
-          promises. I gained 4.8 inches in size and now have the stamina to satisfy my wife like never before. I
+          promises. I gained 3.55 inches in size and now have the stamina to satisfy my wife like never before. I
           wholeheartedly recommend it."
         </div>
       </div>
@@ -253,11 +253,11 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Thomas</a></span>
         <span>Age: <a href="#" class="b__txtm">39 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">3.2 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.1 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">3.1 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">6.4 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I'm genuinely amazed by the results I've experienced since using
-          <a href="#" class="red__txt1">Animale</a>. I never thought I could add 2.9 inches to my size, but here I am!
+          <a href="#" class="red__txt1">Animale</a>. I never thought I could add 3.3 inches to my size, but here I am!
           My wife and I have discovered new
           heights of pleasure, and our relationship has never been stronger."
         </div>
@@ -271,10 +271,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Jake</a></span>
         <span>Age: <a href="#" class="b__txtm">27 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">3.5 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">7.3 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">2.7 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">6.7 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "I took a chance on <a href="#" class="red__txt1">Animale</a>, and I'm so glad I did. With a 3.8-inch size
+          "I took a chance on <a href="#" class="red__txt1">Animale</a>, and I'm so glad I did. With a 4-inch size
           increase, I feel like a brand-new
           man. My wife is more satisfied than ever, and I'm enjoying every minute of our renewed passion."
         </div>
@@ -288,11 +288,11 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Alex</a></span>
         <span>Age: <a href="#" class="b__txtm">31 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">2.2 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.3 inches</a></span>
+        <span>Penis size before Animale: <a href="#" class="b__txtm">1.4 inches</a></span>
+        <span>Penis size after Animale: <a href="#" class="red__txt1">4.9 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "The transformation I've experienced with <a href="#" class="red__txt1">Animale</a> is nothing short of
-          miraculous. Adding 4.1 inches
+          miraculous. Adding 3.5 inches
           to my size has given me a renewed sense of confidence and vigor. My gf and I are exploring
           new depths of intimacy now!! THX!
         </div>
@@ -552,10 +552,14 @@
       right: 2.5%;
       color: #C00000;
       cursor: pointer;
+      zoom: 2;
     }
     .popup__h2{
       color: #C00000;
-      zoom: 1.9;
+      zoom: 1.7;
+    }
+    .popup-mtxt{
+      zoom: 1.2;
     }
   </style>
 
@@ -564,7 +568,7 @@
     <div class="popup-content">
       <div id="close-popup">x</div>
       <h2 class="popup__h2">Wait!</h2>
-      <div><strong>GET A HUGE <span class="red__txt1">DISCOUNT</span> + FREE SHIPPING</strong></div>
+      <div class="popup-mtxt"><strong>GET A HUGE <span class="red__txt1">DISCOUNT</span><br> + FREE SHIPPING</strong></div>
       <div class="zakaz__img">
         <div class="zakaz__pic">
           <img src="./img/banka.png" alt="">
