--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="pic__text__block">
       <img alt="img" class="media__image media__image_doc" src="./img/doc.png">
-      <div class="zn-body__paragraph paragraph__doc">
+      <div class="zn-body__paragraph paragraph__doc1">
         Imagine the newfound confidence and sexual mastery you'll experience when you
         unleash your inner stallion and leave your partner breathless, begging for more! Doctor Samadi's <a href="#"
           class="red__txt1">
@@ -303,7 +303,7 @@
     <!-- ................................................ -->
 
     <h2 class="subtitle sex-title">
-      Sex after using <a href="#" class="red__txt">Animale</a>
+      Sex after using <a href="#" class="red__txt">Animale</a> is absolutely insane!
     </h2>
     <div class="sex__gif">
       <img src="./img/sex1.gif" alt="">
@@ -345,7 +345,7 @@
     <div class="zn-body__paragraph paragraph__do-posle2">
       Discover the jaw-dropping results of the recent experiment with <a href="#" class="red__txt1">Animale</a>: 6 men
       experienced significant increases
-      in penis size, a boost in sexual stamina, and newfound confidence in their performance. Don't miss your chance to
+      in penis size, a boost in sexual stamina, and newfound confidence in their performance.<br>Don't miss your chance to
       revolutionize your sex life with this groundbreaking male enhancement supplement. Unleash your inner sexual beast,
       satisfy your girl like never before, and become the ultimate lover with <a href="#" class="red__txt1">Animale</a>.
       Try it now and witness the
