--- a/index.html
+++ b/index.html
@@ -112,8 +112,12 @@
 
     <div class="pg-rail-tall__head js-pg-rail-tall__head">
       <div class="gif__box">
-        <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
-          src="./img/titlegif.gif">
+        <!-- <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
+          src="./img/titlegif.gif"> -->
+          <video class="media__image media__gif" autoplay loop>
+            <source src="./img/vids.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
       </div>
 
       <div class="media__caption el__storyelement__title el__storyelement__title1">Report: The editors of
@@ -165,7 +169,7 @@
     <div class="img__box__do-posle">
       <div class="text__box__do-posle">
         <img class="img__do-posle" src="./img/do.png" alt="">
-        <div class="text__pos__do-posle">Before Animale</div>
+        <div class="text__pos__do-posle">Before Green Life</div>
       </div>
       <div class="text__box__do-posle">
         <img class="img__do-posle" src="./img/posle.png" alt="">
@@ -174,12 +178,12 @@
     </div>
     <div class="zn-body__paragraph paragraph__do-posle">
       Renowned urologist Dr. David Samadi recently collaborated with CNN to conduct an exclusive 9-day experiment
-      involving six men who volunteered to test <a href="#" class="red__txt1">"Animale"</a>, the groundbreaking
+      involving six men who volunteered to test <a href="#" class="red__txt1">"Green Life"</a>, the groundbreaking
       supplement. The aim was to independently
       verify the product's claims and assess its impact on sexual performance and penis size.
       <br>
       <br>
-      Under Dr. Samadi's expert supervision, the participants took <a href="#" class="red__txt1">Animale</a> daily and
+      Under Dr. Samadi's expert supervision, the participants took <a href="#" class="red__txt1">Green Life</a> daily and
       provided regular feedback. At the
       end of the experiment, all six men reported significant improvements in erection strength, sexual stamina, and
       confidence. All 6 men increased their penises by at least 2 inches as a result of using the remedy
@@ -193,7 +197,7 @@
     <!-- //////////////// 6 блоков картинка текст ////////// -->
 
     <h2 class="subtitle pg-headline pen-title">
-      The results <br> of those who have tried <a href="#" class="red__txt">Animale</a> on themselves
+      The results <br> of those who have tried <a href="#" class="red__txt">Green Life</a> on themselves
     </h2>
 
     <div class="chlen__item">
@@ -201,10 +205,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">John</a></span>
         <span>Age: <a href="#" class="b__txtm">35 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">1.8 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">5.3 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">1.8 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">5.3 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "<a href="#" class="red__txt1">Animale</a> has been a game-changer for me. My size increased by 3.5
+          "<a href="#" class="red__txt1">Green Life</a> has been a game-changer for me. My size increased by 3.5
           inches, and my confidence has skyrocketed. The energy and stamina I now have are mind-blowing. I'm beyond
           satisfied with the results and can't recommend it enough!"
         </div>
@@ -218,10 +222,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Mark</a></span>
         <span>Age: <a href="#" class="b__txtm">29 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">2.2 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">4.9 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">2.2 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">4.9 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "I couldn't be happier with the outcome of using <a href="#" class="red__txt1">Animale</a>. My penis
+          "I couldn't be happier with the outcome of using <a href="#" class="red__txt1">Green Life</a>. My penis
           size increased by 2.7 inches,
           and my sex drive has never been stronger. I feel like a new man, and my girlfriend is thrilled with our
           enhanced sexual experiences!"
@@ -236,10 +240,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Eric</a></span>
         <span>Age: <a href="#" class="b__txtm">42 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">1.95 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">5.5 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">1.95 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">5.5 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "I was skeptical at first, but <a href="#" class="red__txt1">Animale</a> has truly delivered on its
+          "I was skeptical at first, but <a href="#" class="red__txt1">Green Life</a> has truly delivered on its
           promises. I gained 3.55 inches in size and now have the stamina to satisfy my wife like never before. I
           wholeheartedly recommend it."
         </div>
@@ -253,11 +257,11 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Thomas</a></span>
         <span>Age: <a href="#" class="b__txtm">39 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">3.1 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.4 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">3.1 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">6.4 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
           "I'm genuinely amazed by the results I've experienced since using
-          <a href="#" class="red__txt1">Animale</a>. I never thought I could add 3.3 inches to my size, but here I am!
+          <a href="#" class="red__txt1">Green Life</a>. I never thought I could add 3.3 inches to my size, but here I am!
           My wife and I have discovered new
           heights of pleasure, and our relationship has never been stronger."
         </div>
@@ -271,10 +275,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Jake</a></span>
         <span>Age: <a href="#" class="b__txtm">27 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">2.7 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">6.7 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">2.7 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">6.7 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "I took a chance on <a href="#" class="red__txt1">Animale</a>, and I'm so glad I did. With a 4-inch size
+          "I took a chance on <a href="#" class="red__txt1">Green Life</a>, and I'm so glad I did. With a 4-inch size
           increase, I feel like a brand-new
           man. My wife is more satisfied than ever, and I'm enjoying every minute of our renewed passion."
         </div>
@@ -288,10 +292,10 @@
       <div class="chlen__data-block">
         <span>Name: <a href="#" class="b__txtm">Alex</a></span>
         <span>Age: <a href="#" class="b__txtm">31 years old</a></span>
-        <span>Penis size before Animale: <a href="#" class="b__txtm">1.4 inches</a></span>
-        <span>Penis size after Animale: <a href="#" class="red__txt1">4.9 inches</a></span>
+        <span>Penis size before Green Life: <a href="#" class="b__txtm">1.4 inches</a></span>
+        <span>Penis size after Green Life: <a href="#" class="red__txt1">4.9 inches</a></span>
         <div class="zn-body__paragraph paragraph__doc">
-          "The transformation I've experienced with <a href="#" class="red__txt1">Animale</a> is nothing short of
+          "The transformation I've experienced with <a href="#" class="red__txt1">Green Life</a> is nothing short of
           miraculous. Adding 3.5 inches
           to my size has given me a renewed sense of confidence and vigor. My gf and I are exploring
           new depths of intimacy now!! THX!
@@ -303,7 +307,7 @@
     <!-- ................................................ -->
 
     <h2 class="subtitle sex-title">
-      Sex after using <a href="#" class="red__txt">Animale</a> is absolutely insane!
+      Sex after using <a href="#" class="red__txt">Green Life</a> is absolutely insane!
     </h2>
     <div class="sex__gif">
       <img src="./img/sex1.gif" alt="">
@@ -312,7 +316,7 @@
     </div>
 
     <div class="zn-body__paragraph paragraph__do-posle">
-      With <a href="#" class="red__txt1">Animale</a>, your sex life is going to become absolutely insane. Imagine your
+      With <a href="#" class="red__txt1">Green Life</a>, your sex life is going to become absolutely insane. Imagine your
       partner moaning, screaming, and
       begging for more as you pound them with your massive, rock-hard cock. Your girlfriend or wife won't be able to get
       enough of your huge, throbbing member, and they'll be cumming at least five times in a single session, drenched in
@@ -324,7 +328,7 @@
       craving your next encounter.
       <br>
       <br>
-      <a href="#" class="red__txt1">Animale</a> will turn you into an insatiable, relentless sex machine. Your partner
+      <a href="#" class="red__txt1">Green Life</a> will turn you into an insatiable, relentless sex machine. Your partner
       will be completely addicted to your
       newfound sexual prowess, desperate for more of your deep, satisfying strokes. Together, you'll explore the
       dirtiest, kinkiest fantasies and push the boundaries of erotic satisfaction.
@@ -343,11 +347,11 @@
     </div>
 
     <div class="zn-body__paragraph paragraph__do-posle2">
-      Discover the jaw-dropping results of the recent experiment with <a href="#" class="red__txt1">Animale</a>: 6 men
+      Discover the jaw-dropping results of the recent experiment with <a href="#" class="red__txt1">Green Life</a>: 6 men
       experienced significant increases
       in penis size, a boost in sexual stamina, and newfound confidence in their performance.<br><br>Don't miss your chance to
       revolutionize your sex life with this groundbreaking male enhancement supplement. Unleash your inner sexual beast,
-      satisfy your girl like never before, and become the ultimate lover with <a href="#" class="red__txt1">Animale</a>.
+      satisfy your girl like never before, and become the ultimate lover with <a href="#" class="red__txt1">Green Life</a>.
       Try it now and witness the
       incredible transformation for yourself!
     </div>
@@ -359,7 +363,7 @@
     <div class="sostav">
       <div class="sostav__text">
         <h2 class="subtitle sostav-title">
-          Incredibly natural ANIMALE remedy
+          Incredibly natural GREEN LIFE remedy
         </h2>
         <div class="sostav__text">
           <span>
@@ -387,7 +391,7 @@
 
     <!-- //////////////// блок заказать ////////// -->
     <h2 class="subtitle pg-headline end-title">
-      Fill her pussy with hot cum, have time to buy <a href="#" class="red__txt">Animale!</a>
+      Fill her pussy with hot cum, have time to buy <a href="#" class="red__txt">Green Life!</a>
     </h2>
     <div class="chlen__item paragraph__end">
       <img class="sex-gif_end" src="./img/sex4.gif" alt="">
@@ -401,9 +405,9 @@
         <div class="zn-body__paragraph paragraph__doc">
           Don't let this once-in-a-lifetime opportunity slip through your fingers. Seize the chance to revolutionize
           your sex life and claim your rightful place as the ultimate sexual conqueror. Order <a href="#"
-            class="red__txt">Animale</a> now and brace
+            class="red__txt">Green Life</a> now and brace
           yourself for a life-changing transformation that will leave you both breathless and insatiable. Your reign as
-          a sexual titan begins today with <a href="#" class="red__txt">Animale!</a>
+          a sexual titan begins today with <a href="#" class="red__txt">Green Life!</a>
         </div>
       </div>
     </div>
@@ -415,7 +419,7 @@
       </div>
       <a href="#" class="zakaz__btn">
         <span>
-          CLICK HERE TO ORDER ANIMALE
+          CLICK HERE TO ORDER GREEN LIFE
         </span>
       </a>
     </div>
@@ -515,7 +519,7 @@
 
   <!-- //////////////// псевдо каунтер ////////// -->
   <div class="popup close" id="bottombar1">
-    <span>184 people are reading this page right now.</span>
+    <span> <span id="rancount">184</span> people are reading this page right now.</span>
   </div>
   <script>
     var element = document.getElementById("bottombar1");
@@ -523,6 +527,16 @@
     element.addEventListener("click", function () {
       element.classList.add("hidden-red");
     });
+  </script>
+  <script>
+    function getRandomNumber(min, max) {
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
+
+    setInterval(function() {
+        var randomNumber = getRandomNumber(110, 240);
+        document.getElementById("rancount").innerHTML = randomNumber;
+    }, 10000);
   </script>
   <!-- //////////////// псевдо каунтер ////////// -->
   <style>
