--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 
     <div class="pg-rail-tall__head js-pg-rail-tall__head">
       <div class="gif__box">
-        <!-- <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
-          src="./img/titlegif.gif"> -->
-        <video class="media__image media__gif" autoplay muted loop>
+        <img alt="Report: Black women more likely to die from breast cancer " class="media__image media__gif"
+          src="./img/ezgif.com-optimize.gif">
+        <!-- <video class="media__image media__gif" autoplay muted loop>
           <source src="./img/vids.mp4" type="video/mp4">
           Your browser does not support the video tag.
-        </video>
+        </video> -->
         
 
       <div class="media__caption el__storyelement__title el__storyelement__title1">Report: The editors of
