--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
     <div class="pg-rail-tall__head js-pg-rail-tall__head">
       <div class="gif__box">
         <img class="media__image media__gif" src="./img/ezgif.com-optimize.gif" data-gif="./img/ezgif.com-optimize.gif" id="yourGif" style="width: 100%; height: auto;">
-        <!-- <img src="path/to/placeholder.png" data-gif="path/to/yourgif.gif" id="yourGif" style="width: 100%; height: auto;" /> -->
         <div class="media__caption el__storyelement__title el__storyelement__title1">Report: The editors of
           CNN for a long time could not believe the veracity of this story, but after double-checking everything 10
           times, we proudly declare - <span class="b__txt">IT REALLY WORKS</span></div>
@@ -133,7 +132,7 @@
 
 
       <div class="pic__text__block">
-        <img alt="img" class="media__image media__image_doc" src="./img/doc.png">
+        <img alt="img" class="media__image media__image_doc" src="./img/doc.webp">
         <div class="zn-body__paragraph paragraph__doc1">
           Imagine the newfound confidence and sexual mastery you'll experience when you
           unleash your inner stallion and leave your partner breathless, begging for more! Doctor Samadi's <a href="#"
@@ -165,11 +164,11 @@
       </h2>
       <div class="img__box__do-posle">
         <div class="text__box__do-posle">
-          <img class="img__do-posle" src="./img/do.png" alt="">
+          <img class="img__do-posle" src="./img/do.webp" alt="">
           <div class="text__pos__do-posle">Before Green Life</div>
         </div>
         <div class="text__box__do-posle">
-          <img class="img__do-posle" src="./img/posle.png" alt="">
+          <img class="img__do-posle" src="./img/posle.webp" alt="">
           <div class="text__pos__do-posle2">After 9 days</div>
         </div>
       </div>
@@ -199,7 +198,7 @@
       </h2>
 
       <div class="chlen__item">
-        <img src="./img/chlen1.png" alt="">
+        <img src="./img/chlen1.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">John</a></span>
           <span>Age: <a href="#" class="b__txtm">35 years old</a></span>
@@ -216,7 +215,7 @@
 
       <!-- ................................................ -->
       <div class="chlen__item">
-        <img src="./img/chlen2.png" alt="">
+        <img src="./img/chlen2.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">Mark</a></span>
           <span>Age: <a href="#" class="b__txtm">29 years old</a></span>
@@ -234,7 +233,7 @@
 
       <!-- ................................................ -->
       <div class="chlen__item">
-        <img src="./img/chlen3.png" alt="">
+        <img src="./img/chlen3.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">Eric</a></span>
           <span>Age: <a href="#" class="b__txtm">42 years old</a></span>
@@ -251,7 +250,7 @@
 
       <!-- ................................................ -->
       <div class="chlen__item">
-        <img src="./img/chlen4.png" alt="">
+        <img src="./img/chlen4.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">Thomas</a></span>
           <span>Age: <a href="#" class="b__txtm">39 years old</a></span>
@@ -270,7 +269,7 @@
 
       <!-- ................................................ -->
       <div class="chlen__item">
-        <img src="./img/chlen5.png" alt="">
+        <img src="./img/chlen5.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">Jake</a></span>
           <span>Age: <a href="#" class="b__txtm">27 years old</a></span>
@@ -287,7 +286,7 @@
 
       <!-- ................................................ -->
       <div class="chlen__item">
-        <img src="./img/chlen6.png" alt="">
+        <img src="./img/chlen6.webp" alt="">
         <div class="chlen__data-block">
           <span>Name: <a href="#" class="b__txtm">Alex</a></span>
           <span>Age: <a href="#" class="b__txtm">31 years old</a></span>
@@ -393,7 +392,7 @@
             </span>
           </div>
         </div>
-        <img class="nat__img" alt="" src="./img/100pr.png">
+        <img class="nat__img" alt="" src="./img/100pr.webp">
       </div>
 
       <!-- //////////////// блок заказать ////////// -->
@@ -424,7 +423,7 @@
       <hr>
       <div class="zakaz__img">
         <div class="zakaz__pic">
-          <img src="./img/banka.png" alt="">
+          <img src="./img/banka.webp" alt="">
         </div>
         <a href="#" class="zakaz__btn">
           <span>
@@ -584,7 +583,7 @@
         </div>
         <div class="zakaz__img">
           <div class="zakaz__pic">
-            <img src="./img/banka.png" alt="">
+            <img src="./img/banka.webp" alt="">
           </div>
           <a href="#" class="zakaz__btn">
             <span>
